# RTX3050-GPU-Mastery

./: .gitignore  COMMIT_MESSAGE.txt  CONTRIBUTING.md  LICENSE  README.legacy.md  README.md  UPLOAD_TO_GITHUB.md  pyproject.toml  requirements.txt  run_transformer_benchmark.bat  run_transformer_benchmark_light.bat
benchmarks/: README.md  attention_benchmark.py  bench_utils.py  benchmark_attention.py  benchmark_attention_results.csv  benchmark_conv.py  benchmark_conv_results.csv  benchmark_matmul.py  benchmark_matmul_results.csv  benchmark_transformer.py  benchmark_transformer_results.csv  conv_benchmark.py  generate_charts.py  matmul_benchmark.py  performance_report.md  transformer_benchmark.py  transformer_reference.py
cuda/: README.md  build.bat  build_matrixMul.bat  build_reduction.bat  matrixMul.cu  plot_matrix_speedup.py  plot_progress_flow.py  progress_flow.mmd  reduction.cu  vectorAdd.cu  vector_add_cpu.cpp
cuda_roadmap/: README.md  build.bat  build.sh  run_benchmarks.py
docs/: DCARD_POST.md  INDEX.md  LINKEDIN_POST.md  benchmarks.md  cuda_kernel_optimization.md  cuda_roadmap.md  flashattention_algorithm.md  getting_started.md  gpu_memory_hierarchy.md  kernel_explanations.md  level1_kernels.md  level2_memory.md  level3_advanced.md  level4_tensor_core.md  memory_hierarchy_diagrams.md  nsight_profiling_guide.md  optimization_guide.md  roofline_analysis.md  transformer_benchmark_gpu_load.md  transformer_gpu_kernels.md  triton_kernel_design.md
extension/: README.md  build_extension.bat  build_in_english_path.bat  conv_kernel.cu  mnist_custom_conv.py  setup.py  (+1 more)
(+132 files in other folders)
